--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
-@import 'tailwindcss';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded");
+@import "tailwindcss";
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -6,6 +8,53 @@
 @source '../**/*.js';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans: "Poppins";
+}
+
+.md-icon-18 {
+    font-size: 18px;
+}
+.md-icon-24 {
+    font-size: 24px;
+}
+.md-icon-36 {
+    font-size: 36px;
+}
+.md-icon-48 {
+    font-size: 48px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="password"] {
+    @apply bg-zinc-50 border border-gray-400/80 rounded-full w-full py-2.5 px-4 text-sm;
+}
+
+@utility btn-base {
+    @apply flex items-center justify-center gap-x-2 py-2.5 px-6 text-sm size-fit md:text-base text-center font-medium leading-normal rounded-full transition-all duration-150 ease-in-out border-none cursor-pointer disabled:pointer-events-none;
+}
+
+@utility btn-filled {
+    @apply btn-base bg-rose-500 text-white hover:bg-rose-600/90 hover:shadow-md disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
+}
+
+@utility btn-filled-tonal {
+    @apply btn-base bg-rose-200/50 text-rose-900/70 hover:bg-rose-200/90 hover:shadow-md disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
+}
+
+@utility btn-filled-tonal-warning {
+    @apply btn-base bg-red-200/50 text-red-900/50 hover:bg-red-200/90 hover:shadow-md disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
+}
+
+@utility btn-outline {
+    @apply btn-base pl-4 pr-6 bg-transparent text-rose-500 outline outline-neutral-500 hover:shadow-md disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
+}
+
+@utility btn-text {
+    @apply btn-base bg-transparent text-rose-900/70 hover:bg-rose-200/90 hover:shadow-md hover:text-rose-900/70 disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
+}
+
+@utility btn-link {
+    @apply btn-base p-0 bg-transparent text-neutral-700 hover:bg-none hover:text-neutral-900 disabled:bg-neutral-500/10 disabled:text-neutral-900/30 disabled:hover:shadow-none;
 }
